SPA/examples/negative/test5N.c
int main(void){
  int i = 0, j = 0;
  j = i++ && ++i;
  return j;
}
